--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,5 +6,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="context-root" value="btcapp"/>
         <property name="java-output-path" value="/btcserver-master/target/classes"/>
+        <property name="component.exclusion.patterns"/>
     </wb-module>
 </project-modules>
